# loopyng

./: README.md  setup.cfg
.github/workflows/: ci.yml
loopyng/: __init__.py  lite_sample_sounds.py  util.py
loopyng/examples/: annotated_sounds.py  tagged_intervals.py
loopyng/sound/: __init__.py  audio.py  audio_librosa.py
loopyng/utils/: __init__.py  date_ticks.py  infinite_waveform.py  librosa_utils.py  plotting.py
misc/: 99 - loopyng - encoding data in audio- TJ hackathon .ipynb  Making synthetic sounds.ipynb  hum_demo.ipynb  librosa testing.ipynb  making_tagged_intervals.ipynb
