[metadata]
name = loopyng
version = 0.0.2
url = https://github.com/thorwhalen/loopyng/loopyng
platforms = any
description_file = README.md
description = Tools for musical loops
root_url = https://github.com/thorwhalen/loopyng
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = loopyng

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

